welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: type int
def remplirTableau(t:Array[Color],x:int){
                                    ^Array1:26: error: not found: type int
def colorier(t:Array[Color],x:int){
                              ^Array1:22: error: not found: value x
  recule(x-1)
         ^